optimise: preload fonts, defer non critical css/js

--- a/Server/public/coming_soon.html
+++ b/Server/public/coming_soon.html
@@ -11,20 +11,27 @@
   <!-- Favicon -->
   <link href="img/favicon.ico" rel="icon">
 
-  <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap"
-    rel="stylesheet">
-
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-  <!-- Libraries Stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/owl.carousel@2.2.0/dist/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.10.0/dist/css/lightbox.min.css" rel="stylesheet">
-
   <!-- Customized Bootstrap Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
+
+  <link rel="preload" href="fonts/AlexBrush-Regular.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="fonts/Arimo-Regular.ttf" as="font" type="font/ttf" crossorigin>
+  <style>
+    @font-face {
+      font-family: 'Alex Brush';
+      font-style: normal;
+      font-weight: 400;
+      src: local('AlexBrush'), local('AlexBrush-Regular'), url("fonts/AlexBrush-Regular.ttf") format('truetype');
+      font-display: block;
+    }
+
+    @font-face {
+      font-family: 'Arimo';
+      font-style: normal;
+      font-weight: 400;
+      src: local('Arimo'), local('Arimo-Regular'), url("fonts/Arimo-Regular.ttf") format('truetype');
+    }
+  </style>
 </head>
 
 <body>
