--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -11,30 +11,28 @@
   <!-- Favicon -->
   <link href="img/favicon.ico" rel="icon">
 
-  <!-- Google Web Fonts -->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:wght@400;600&display=swap"
-    rel="stylesheet">
-  <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
-  <link href='https://fonts.googleapis.com/css?family=Arimo' rel='stylesheet'>
-
-  <!-- Font Awesome -->
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
-
-  <!-- Libraries Stylesheet -->
-  <link href="https://cdn.jsdelivr.net/npm/owl.carousel@2.2.0/dist/assets/owl.carousel.min.css" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.10.0/dist/css/lightbox.min.css" rel="stylesheet">
 
   <!-- Customized Bootstrap Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 
-  <link href="fonts/BlackerSansDisplay-Regular.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
-  <link href="fonts/BlackerSansText-Regular.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
-  <link href="fonts/BlackerSansText-Bold.woff2" rel="preload" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/AlexBrush-Regular.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="fonts/Arimo-Regular.ttf" as="font" type="font/ttf" crossorigin>
+  <style>
+    @font-face {
+      font-family: 'Alex Brush';
+      font-style: normal;
+      font-weight: 400;
+      src: local('AlexBrush'), local('AlexBrush-Regular'), url("fonts/AlexBrush-Regular.ttf") format('truetype');
+      font-display: block;
+    }
 
-  <!-- <meta http-equiv="refresh" content="10"> -->
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="preconnect" href="https://cdnjs.cloudflare.com" crossorigin>
+    @font-face {
+      font-family: 'Arimo';
+      font-style: normal;
+      font-weight: 400;
+      src: local('Arimo'), local('Arimo-Regular'), url("fonts/Arimo-Regular.ttf") format('truetype');
+    }
+  </style>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51" style="font-family:'Arimo', sans-serif;">
@@ -617,33 +615,33 @@
 
   <!-- JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.4.1/dist/jquery.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha256-OUFW7hFO0/r5aEGTQOz9F/aXQOt+TwqI1Z4fbVvww04=" crossorigin="anonymous"></script>
+    integrity="sha256-OUFW7hFO0/r5aEGTQOz9F/aXQOt+TwqI1Z4fbVvww04=" crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery.easing@1.4.1/jquery.easing.min.js"
     integrity="sha512-0QbL0ph8Tc8g5bLhfVzSqxe9GERORsKhIn1IrpxDAgUsbBGz/V7iSav2zzW325XGd1OMLdL4UiqRJj702IeqnQ=="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/waypoints@4.0.1/lib/jquery.waypoints.min.js"
     integrity="sha512-3yXkxlQAK/ZsuuoJF5dvda/Z4WyyLZlfNx3oedg9kzQ5G/npIXGJlWZNqP3WQyOSECBYQf2grGkbdRaT1QXHWQ=="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/owl.carousel@2.2.0/dist/owl.carousel.min.js"
     integrity="sha512-yG5avRhg8AWY1BsP/N//3vL3l74jbsQHivqAXOx7KB3agFQzFbeubQr9zYBinQ8+Iwsebv2s2+muvA9fMw/Ebg=="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/isotope-layout@3.0.5/dist/isotope.pkgd.min.js"
     integrity="sha512-pTyLt2tKREvSiNYM21FRWRQtjOt/hZNYI+BRQx9yDObvcIydJ+3Ds/DxAKT/vK7D7ekSFfpubYh7ckity28MKQ=="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.10.0/dist/js/lightbox.min.js"
     integrity="sha512-nUUXyEC/xe6BRSl6eTPMaXErp5wdoftIGgrCBRd51MmwMn9PnN+X2usTJb7sGphsXtKT335xWAbccalopgcjNA=="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/imagesloaded@5.0.0/imagesloaded.pkgd.min.js"
-    integrity="sha256-htrLFfZJ6v5udOG+3kNLINIKh2gvoKqwEhHYfTTMICc=" crossorigin="anonymous"></script>
+    integrity="sha256-htrLFfZJ6v5udOG+3kNLINIKh2gvoKqwEhHYfTTMICc=" crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/htmx.org@1.9.12/dist/htmx.min.js"
-    integrity="sha256-RJMXreeIHpSVENthSZHhlcOgmcTHkcJNrOxV+fSipFI=" crossorigin="anonymous"></script>
+    integrity="sha256-RJMXreeIHpSVENthSZHhlcOgmcTHkcJNrOxV+fSipFI=" crossorigin="anonymous" defer></script>
   <script src="https://cdn.jsdelivr.net/npm/htmx-ext-response-targets@2.0.1/response-targets.min.js"
-    integrity="sha256-0NxOMX/olxaAJZbINvI6oJ38BxK6vVL9gjdRKD2+HFk=" crossorigin="anonymous"></script>
+    integrity="sha256-0NxOMX/olxaAJZbINvI6oJ38BxK6vVL9gjdRKD2+HFk=" crossorigin="anonymous" defer></script>
 
   <!-- Template Javascript -->
-  <script src="js/main.js"></script>
+  <script src="js/main.js" defer></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
@@ -652,6 +650,25 @@
       });
     });
   </script>
+
+  <!-- Font Awesome -->
+  <link rel="preload" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css">
+  </noscript>
+
+  <!-- Libraries Stylesheet -->
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.2.0/dist/assets/owl.carousel.min.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/owl.carousel@2.2.0/dist/assets/owl.carousel.min.css">
+  </noscript>
+  <link rel="preload" href="https://cdn.jsdelivr.net/npm/lightbox2@2.10.0/dist/css/lightbox.min.css" as="style"
+    onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/lightbox2@2.10.0/dist/css/lightbox.min.css">
+  </noscript>
 </body>
 
 </html>
