--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -31,8 +31,14 @@
       font-style: normal;
       font-weight: 400;
       src: local('Arimo'), local('Arimo-Regular'), url("fonts/Arimo-Regular.ttf") format('truetype');
+      font-display: swap;
     }
   </style>
+
+  <!-- Images -->
+  <link rel="preload" as="image" href="optimised/img/carousel-1.webp"
+    imagesrcset="optimised/img/carousel-1-300px.webp 300w, optimised/img/carousel-1-880px.webp 880w, optimised/img/carousel-1-1210px.webp 1210w, optimised/img/carousel-1-1470px.webp 1470w, optimised/img/carousel-1-1680px.webp 1680w, optimised/img/carousel-1-1880px.webp 1880w, optimised/img/carousel-1-2050px.webp 2050w, optimised/img/carousel-1-2210px.webp 2210w, optimised/img/carousel-1-2360px.webp 2360w, optimised/img/carousel-1-2500px.webp 2500w, optimised/img/carousel-1-2640px.webp 2640w, optimised/img/carousel-1-2765px.webp 2765w, optimised/img/carousel-1-300px.webp 300w"
+    type="image/webp" imagesizes="100vw">
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51" style="font-family:'Arimo', sans-serif;">
@@ -69,7 +75,9 @@
   <!-- Carousel Start -->
   <div class="container-fluid p-0 mb-5 pb-5" id="home">
     <div class="position-relative" style="height: 100vh; min-height: 400px;">
-      <img class="position-absolute w-100 h-100" src="img/carousel-1.png" style="object-fit: cover;">
+      <img class="position-absolute w-100 h-100" src="optimised/img/carousel-1.webp"
+        srcset="optimised/img/carousel-1-300px.webp 300w, optimised/img/carousel-1-880px.webp 880w, optimised/img/carousel-1-1210px.webp 1210w, optimised/img/carousel-1-1470px.webp 1470w, optimised/img/carousel-1-1680px.webp 1680w, optimised/img/carousel-1-1880px.webp 1880w, optimised/img/carousel-1-2050px.webp 2050w, optimised/img/carousel-1-2210px.webp 2210w, optimised/img/carousel-1-2360px.webp 2360w, optimised/img/carousel-1-2500px.webp 2500w, optimised/img/carousel-1-2640px.webp 2640w, optimised/img/carousel-1-2765px.webp 2765w"
+        sizes="100vw" alt="Jack & Eleanor" style="object-fit: cover;">
       <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
         <div class="p-3" style="max-width: 900px;">
           <h1 class="display-1 font-secondary text-white mt-n3 mb-md-4">Jack & Eleanor</h1>
@@ -101,12 +109,18 @@
           </div>
         </div>
         <div class="col-md-6 p-0" style="min-height: 400px;">
-          <img class="position-absolute w-100 h-100" src="img/about-1.jpg" style="object-fit: cover;">
+          <img class="position-absolute w-100 h-100" src="optimised/img/about-1.webp"
+            sizes="(min-width: 1200px) 555px, (min-width: 1000px) 465px, (min-width: 780px) 345px, (min-width: 600px) 510px, calc(96.43vw - 49px)"
+            srcset="optimised/img/about-1-465px.webp 465w, optimised/img/about-1-690px.webp 690w, optimised/img/about-1-930px.webp 930w, optimised/img/about-1-1110px.webp 1110w"
+            style="object-fit: cover;">
         </div>
       </div>
       <div class="row m-0">
         <div class="col-md-6 p-0" style="min-height: 400px;">
-          <img class="position-absolute w-100 h-100" src="img/about-2.jpg" style="object-fit: cover;">
+          <img class="position-absolute w-100 h-100" src="optimised/img/about-2.webp"
+            sizes="(min-width: 1200px) 555px, (min-width: 1000px) 465px, (min-width: 780px) 345px, (min-width: 600px) 510px, calc(96.43vw - 49px)"
+            srcset="optimised/img/about-2-465px.webp 465w, optimised/img/about-2-690px.webp 690w, optimised/img/about-2-930px.webp 930w, optimised/img/about-2-1110px.webp 1110w"
+            style="object-fit: cover;">
         </div>
         <div class="col-md-6 p-0 text-center text-md-left">
           <div class="h-100 d-flex flex-column justify-content-center bg-secondary p-5">
@@ -233,86 +247,142 @@
       <div class="gallery-item" id="empty-gallery-item">
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-1.jpg" alt="">
-        <a href="img/gallery-1.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-1.webp" data-src="optimised/img/gallery-1.webp"
+          data-srcset="optimised/img/gallery-1-507px.webp 507w, optimised/img/gallery-1-800px.webp 800w, optimised/img/gallery-1-1014px.webp 1014w"
+          srcset="optimised/img/gallery-1-507px.webp 507w, optimised/img/gallery-1-800px.webp 800w, optimised/img/gallery-1-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-1.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-2.jpg" alt="">
-        <a href="img/gallery-2.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-2.webp" data-src="optimised/img/gallery-2.webp"
+          srcset="optimised/img/gallery-2-507px.webp 507w, optimised/img/gallery-2-800px.webp 800w, optimised/img/gallery-2-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-2-507px.webp 507w, optimised/img/gallery-2-800px.webp 800w, optimised/img/gallery-2-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-2.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-3.jpg" alt="">
-        <a href="img/gallery-3.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-3.webp" data-src="optimised/img/gallery-3.webp"
+          srcset="optimised/img/gallery-3-507px.webp 507w, optimised/img/gallery-3-800px.webp 800w, optimised/img/gallery-3-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-3-507px.webp 507w, optimised/img/gallery-3-800px.webp 800w, optimised/img/gallery-3-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-3.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-4.jpg" alt="">
-        <a href="img/gallery-4.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-4.webp" data-src="optimised/img/gallery-4.webp"
+          srcset="optimised/img/gallery-4-507px.webp 507w, optimised/img/gallery-4-800px.webp 800w, optimised/img/gallery-4-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-4-507px.webp 507w, optimised/img/gallery-4-800px.webp 800w, optimised/img/gallery-4-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-4.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-5.jpg" alt="">
-        <a href="img/gallery-5.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-5.webp" data-src="optimised/img/gallery-5.webp"
+          srcset="optimised/img/gallery-5-507px.webp 507w, optimised/img/gallery-5-800px.webp 800w, optimised/img/gallery-5-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-5-507px.webp 507w, optimised/img/gallery-5-800px.webp 800w, optimised/img/gallery-5-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-5.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-6.jpg" alt="">
-        <a href="img/gallery-6.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-6.webp" data-src="optimised/img/gallery-6.webp"
+          srcset="optimised/img/gallery-6-507px.webp 507w, optimised/img/gallery-6-800px.webp 800w, optimised/img/gallery-6-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-6-507px.webp 507w, optimised/img/gallery-6-800px.webp 800w, optimised/img/gallery-6-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-6.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-7.jpg" alt="">
-        <a href="img/gallery-7.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-7.webp" data-src="optimised/img/gallery-7.webp"
+          srcset="optimised/img/gallery-7-507px.webp 507w, optimised/img/gallery-7-800px.webp 800w, optimised/img/gallery-7-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-7-507px.webp 507w, optimised/img/gallery-7-800px.webp 800w, optimised/img/gallery-7-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-7.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-8.jpg" alt="">
-        <a href="img/gallery-8.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-8.webp" data-src="optimised/img/gallery-8.webp"
+          srcset="optimised/img/gallery-8-507px.webp 507w, optimised/img/gallery-8-800px.webp 800w, optimised/img/gallery-8-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-8-507px.webp 507w, optimised/img/gallery-8-800px.webp 800w, optimised/img/gallery-8-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-8.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-9.jpg" alt="">
-        <a href="img/gallery-9.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-9.webp" data-src="optimised/img/gallery-9.webp"
+          srcset="optimised/img/gallery-9-507px.webp 507w, optimised/img/gallery-9-800px.webp 800w, optimised/img/gallery-9-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-9-507px.webp 507w, optimised/img/gallery-9-800px.webp 800w, optimised/img/gallery-9-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-9.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-10.jpg" alt="">
-        <a href="img/gallery-10.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-10.webp" data-src="optimised/img/gallery-10.webp"
+          srcset="optimised/img/gallery-10-507px.webp 507w, optimised/img/gallery-10-800px.webp 800w, optimised/img/gallery-10-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-10-507px.webp 507w, optimised/img/gallery-10-800px.webp 800w, optimised/img/gallery-10-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-10.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-11.jpg" alt="">
-        <a href="img/gallery-11.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-11.webp" data-src="optimised/img/gallery-11.webp"
+          srcset="optimised/img/gallery-11-507px.webp 507w, optimised/img/gallery-11-800px.webp 800w, optimised/img/gallery-11-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-11-507px.webp 507w, optimised/img/gallery-11-800px.webp 800w, optimised/img/gallery-11-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-11.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-12.jpg" alt="">
-        <a href="img/gallery-12.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-12.webp" data-src="optimised/img/gallery-12.webp"
+          srcset="optimised/img/gallery-12-507px.webp 507w, optimised/img/gallery-12-800px.webp 800w, optimised/img/gallery-12-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-12-507px.webp 507w, optimised/img/gallery-12-800px.webp 800w, optimised/img/gallery-12-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-12.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-13.jpg" alt="">
-        <a href="img/gallery-13.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-13.webp" data-src="optimised/img/gallery-13.webp"
+          srcset="optimised/img/gallery-13-507px.webp 507w, optimised/img/gallery-13-800px.webp 800w, optimised/img/gallery-13-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-13-507px.webp 507w, optimised/img/gallery-13-800px.webp 800w, optimised/img/gallery-13-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-13.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
       <div class="gallery-item">
-        <img class="img-fluid w-100" src="img/gallery-14.jpg" alt="">
-        <a href="img/gallery-14.jpg" data-lightbox="gallery">
+        <img class="img-fluid w-100" src="optimised/img/gallery-14.webp" data-src="optimised/img/gallery-14.webp"
+          srcset="optimised/img/gallery-14-507px.webp 507w, optimised/img/gallery-14-800px.webp 800w, optimised/img/gallery-14-1014px.webp 1014w"
+          data-srcset="optimised/img/gallery-14-507px.webp 507w, optimised/img/gallery-14-800px.webp 800w, optimised/img/gallery-14-1014px.webp 1014w"
+          sizes="(max-width: 576px) 100vw, (max-width: 768px) 50vw, (max-width: 992px) 25vw, (max-width: 1200px) 20vw, 20vw"
+          alt="">
+        <a href="optimised/img/gallery-14.webp" data-lightbox="gallery">
           <i class="fa fa-2x fa-plus text-white"></i>
         </a>
       </div>
