optimise: minify css and javascript

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -13,7 +13,7 @@
 
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="css/style.css" rel="stylesheet">
+  <link href="optimised/css/style.min.css" rel="stylesheet">
 
   <link rel="preload" href="fonts/AlexBrush-Regular.ttf" as="font" type="font/ttf" crossorigin>
   <link rel="preload" href="fonts/Arimo-Regular.ttf" as="font" type="font/ttf" crossorigin>
@@ -711,7 +711,7 @@
     integrity="sha256-0NxOMX/olxaAJZbINvI6oJ38BxK6vVL9gjdRKD2+HFk=" crossorigin="anonymous" defer></script>
 
   <!-- Template Javascript -->
-  <script src="js/main.js" defer></script>
+  <script src="optimised/js/main.min.js" defer></script>
 
   <script>
     document.addEventListener('DOMContentLoaded', function() {
