fix: copy changes

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -523,7 +523,8 @@
               <ul class="list-unstyled">
                 <li class="mb-3">Accommodation is available at the venue and can be booked through this link <a
                     href="https://direct-book.com/properties/wasingparkdirect?locale=en&items[0][adults]=2&items[0][children]=0&items[0][infants]=0&currency=GBP&checkInDate=2025-05-27&checkOutDate=2025-05-28&promocode=270525MOORHOUSE&trackPage=yes"
-                    target="_blank">here</a>, be sure to use the promo code <strong>270525MOORHOUSE</strong>.</li>
+                    target="_blank">here</a>, be sure to use the promo code <strong>270525MOORHOUSE</strong>. There are
+                  17 rooms available and are first come, first served.</li>
               </ul>
             </div>
           </div>
@@ -538,9 +539,9 @@
           <div class="row justify-content-center">
             <div class="col-md-12 text-center">
               <ul class="list-unstyled">
-                <li class="mb-3"><strong>Checkout:</strong> For those staying at the venue, checkout is at 10:00 AM
-                  after having had breakfast.</li>
-                <li class="mb-3"><strong>Morning Walk:</strong> Join us for a walk. Meeting at 10:30 AM at the
+                <li class="mb-3"><strong>Checkout:</strong> For those staying at the venue, checkout is at 10:30 AM
+                  with breakfast served at 09:00 AM.</li>
+                <li class="mb-3"><strong>Morning Walk:</strong> Join us for a walk. Meeting at 11:00 AM at the
                   Silchester
                   Roman Ruins, RG7 2HP.</li>
                 <li class="mb-3"><strong>Meet at the Pub:</strong> After the walk, we can have a tipple at the local
