optimise: switch to woff2 fonts

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -15,14 +15,14 @@
   <!-- Customized Bootstrap Stylesheet -->
   <link href="optimised/css/style.min.css" rel="stylesheet">
 
-  <link rel="preload" href="fonts/AlexBrush-Regular.ttf" as="font" type="font/ttf" crossorigin>
-  <link rel="preload" href="fonts/Arimo-Regular.ttf" as="font" type="font/ttf" crossorigin>
+  <link rel="preload" href="fonts/AlexBrush-Regular.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/Arimo-Regular.woff2" as="font" type="font/woff2" crossorigin>
   <style>
     @font-face {
       font-family: 'Alex Brush';
       font-style: normal;
       font-weight: 400;
-      src: local('AlexBrush'), local('AlexBrush-Regular'), url("fonts/AlexBrush-Regular.ttf") format('truetype');
+      src: url("fonts/AlexBrush-Regular.woff2") format('woff2'), url("fonts/AlexBrush-Regular.ttf") format('truetype');
       font-display: block;
     }
 
@@ -30,7 +30,7 @@
       font-family: 'Arimo';
       font-style: normal;
       font-weight: 400;
-      src: local('Arimo'), local('Arimo-Regular'), url("fonts/Arimo-Regular.ttf") format('truetype');
+      src: url("fonts/Arimo-Regular.woff2") format('woff2'), url("fonts/Arimo-Regular.ttf") format('truetype');
       font-display: swap;
     }
   </style>
