--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -519,7 +519,7 @@
         <div class="col-md-12 text-center">
           <h4 class="display-5 mb-4">Accommodation</h4>
           <div class="row justify-content-center">
-            <div class="col-md-12 text-center">
+            <div class="col-xl-6 text-center">
               <ul class="list-unstyled">
                 <li class="mb-3">Accommodation is available at the venue and can be booked through this link <a
                     href="https://direct-book.com/properties/wasingparkdirect?locale=en&items[0][adults]=2&items[0][children]=0&items[0][infants]=0&currency=GBP&checkInDate=2025-05-27&checkOutDate=2025-05-28&promocode=270525MOORHOUSE&trackPage=yes"
