feat: add plausible web analytics

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -39,6 +39,11 @@
   <link rel="preload" as="image" href="optimised/img/carousel-1.webp"
     imagesrcset="optimised/img/carousel-1-300px.webp 300w, optimised/img/carousel-1-880px.webp 880w, optimised/img/carousel-1-1210px.webp 1210w, optimised/img/carousel-1-1470px.webp 1470w, optimised/img/carousel-1-1680px.webp 1680w, optimised/img/carousel-1-1880px.webp 1880w, optimised/img/carousel-1-2050px.webp 2050w, optimised/img/carousel-1-2210px.webp 2210w, optimised/img/carousel-1-2360px.webp 2360w, optimised/img/carousel-1-2500px.webp 2500w, optimised/img/carousel-1-2640px.webp 2640w, optimised/img/carousel-1-2765px.webp 2765w, optimised/img/carousel-1-300px.webp 300w"
     type="image/webp" imagesizes="100vw">
+
+  <!-- Tracking -->
+  <script defer data-domain="jackandeleanor.co.uk"
+    src="https://plausible.moverperfect.com/js/script.file-downloads.hash.outbound-links.pageview-props.revenue.tagged-events.js"></script>
+  <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 </head>
 
 <body data-spy="scroll" data-target=".navbar" data-offset="51" style="font-family:'Arimo', sans-serif;">
