optimise: defer non critical css

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -744,7 +744,8 @@
   </noscript>
 
   <!-- Full Style Sheet -->
-  <link href="css/style.css" rel="stylesheet">
+  <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript><link rel="stylesheet" href="css/style.css"></noscript>
 </body>
 
 </html>
