fix: add monzo link to registry section

--- a/Server/public/index.html
+++ b/Server/public/index.html
@@ -575,7 +575,9 @@
           <p>We're looking forward to celebrating with you on our big day. Having you attend our wedding is the greatest
             gift of all, however, if you're looking for wedding gift ideas, we've registered <a
               href="https://prezola.com/buy/view/204608" target="_blank">here</a> for things that we
-            would like to outfit our new home.</p>
+            would like to outfit our new home. If you prefer to gift money, our Monzo details are available at <a
+              href="https://monzo.me/jackmoorhouse?d=Wedding%20Gift" target="_blank">https://monzo.me/jackmoorhouse</a>
+          </p>
           <p>
             <strong>Note: </strong>We have noticed that some of the items on here have a markup, so if there is anything
             on this list that you would like to gift us but have seen cheaper elsewhere, let us know, and we'll remove
@@ -745,7 +747,9 @@
 
   <!-- Full Style Sheet -->
   <link rel="preload" href="css/style.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
-  <noscript><link rel="stylesheet" href="css/style.css"></noscript>
+  <noscript>
+    <link rel="stylesheet" href="css/style.css">
+  </noscript>
 </body>
 
 </html>
